--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,8 @@
       <h2 class="page-heading">ユーザー新規登録</h2>
       <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
 
+        <%= devise_error_messages! %>
+
         <div class="field">
           <%= f.label :name, "ユーザー名" %><br />
           <%= f.text_field :name, id:"user_name", autofocus: true %>
